--- a/_posts/2022-07-29-test-md.md
+++ b/_posts/2022-07-29-test-md.md
@@ -1,8 +1,7 @@
 ---
 title: Test markdown
 tags: TeXt
-cover: /docs/assets/images/axure/articles-item-cover-excerpt.jpg
----
+cover: /assets/images/bg.png
 
 First time solving challenges from Google CTF, I feel pretty good but I have to learn more and more. 
 
