--- a/_posts/2022-07-29-test-md.md
+++ b/_posts/2022-07-29-test-md.md
@@ -1,7 +1,7 @@
 ---
 title: Test markdown
 tags: TeXt
-cover: /assets/images/bg.png
+cover: /assets/images/1.png
 ---
 
 First time solving challenges from Google CTF, I feel pretty good but I have to learn more and more. 
